--- a/src/modules/product/styles/ProductHome.module.css
+++ b/src/modules/product/styles/ProductHome.module.css
@@ -171,6 +171,7 @@
 }
 
 .rating {
+  display: flex;
   width: 80px;
 }
 
